# passman

./: .gitignore  ADD_BUTTON_FIXED.md  ADD_BUTTON_TEST.md  ADD_BUTTON_TEST_GUIDE.md  ADD_BUTTON_WORKING_GUIDE.md  ADD_DIALOG_COMPLETE_GUIDE.md  ADD_DIALOG_TEST_GUIDE.md  AUTO_QUIT_GUIDE.md  BUILD_COMPLETE.md  CLIPBOARD_FIX_SUMMARY.md  CLI_VERSION_GUIDE.md  Cargo.toml  DIALOG_WORKING_GUIDE.md  ENTRY_MANAGEMENT_GUIDE.md  ENTRY_OPERATIONS_GUIDE.md  ENTRY_OPERATIONS_SUMMARY.md  FINAL_SUMMARY.md  FIND_ADD_BUTTON_GUIDE.md  GITHUB_READY_SUMMARY.md  GLOBAL_SHORTCUT_GUIDE.md  HOW_TO_USE_OPERATIONS.md  KEYBOARD_CONTROLS_GUIDE.md  KEY_FIX_GUIDE.md  KILL_PROCESS_GUIDE.md  LICENSE  PASSMAN_CONFIGURATION_GUIDE.md  PASSMAN_TERMINAL_GUIDE.md  PERSISTENCE_FIX_SUMMARY.md  PROJECT_STATUS.md  README.md  SEARCH_AND_VIEW_GUIDE.md  SETUP_GUIDE.md  SHORTCUT_SETUP_COMPLETE.md  SIMPLIFIED_DIALOG_GUIDE.md  SIMPLIFIED_STRUCTURE_SUMMARY.md  TERMINAL_CORRUPTION_FIX.md  TERMINAL_FOCUS_SUMMARY.md  TERMINAL_VERSION_GUIDE.md  UNINSTALL_SUMMARY.md  build.sh  (+18 more)
src/: app.rs  cli_main.rs  clipboard.rs  config.rs  lib.rs  main.rs  minimal_test.rs  search.rs  tui_main.rs  ui.rs  vault.rs
