[package]
name = "keytui-gui"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Lightweight desktop password manager with Spotlight-style overlay interface"
license = "MIT"

[[bin]]
name = "keytui-gui"
path = "src/main.rs"

[[bin]]
name = "keytui-tui"
path = "src/tui_main.rs"

[[bin]]
name = "passman"
path = "src/cli_main.rs"

[dependencies]
# GUI Framework (for GUI version)
gtk4 = { version = "0.6", features = ["v4_6"], optional = true }
glib = { version = "0.17", optional = true }
gio = { version = "0.17", optional = true }

# Terminal UI Framework
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }

# CLI dependencies
rpassword = "7.0"

# Error Handling
anyhow = "1.0"

# Configuration
dirs = "5.0"
toml = "0.7"

# Additional dependencies
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["gui"]
gui = ["gtk4", "glib", "gio"]